[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm>=8.1.0"]

[project]
name = "wiremock-mock"
description = "Serve WireMock stubs as a mock with respx."
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = [
    "httpx",
    "mock",
    "respx",
    "wiremock",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Pytest",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "beartype>=0.18",
    "httpx>=0.27.0",
    "respx>=0.22.0",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.11.24",
    "check-manifest==0.51",
    "deptry==0.24.0",
    "doc8==2.0.0",
    "doccmd==2026.3.1",
    "furo==2025.12.19",
    "interrogate==1.7.0",
    "mypy[faster-cache]==1.19.1",
    "mypy-strict-kwargs==2026.1.12",
    "prek==0.3.3",
    "pydocstringformatter==0.7.5",
    "pylint[spelling]==4.0.5",
    "pylint-per-file-ignores==3.2.0",
    "pyproject-fmt==2.16.2",
    "pyrefly==0.54.0",
    "pyright==1.1.408",
    "pyroma==5.0.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    # We add shellcheck-py not only for shell scripts and shell code blocks,
    # but also because having it installed means that ``actionlint-py`` will
    # use it to lint shell commands in GitHub workflow files.
    "shellcheck-py==0.11.0.1",
    "shfmt-py==3.12.0.2",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
    "sphinxcontrib-spelling==8.0.2",
    "sybil[pytest]==9.3.0",
    "ty==0.0.19",
    "types-requests>=2.32.0",
    "vulture==2.14",
    "yamlfix==1.19.1",
    "zizmor==1.22.0",
]
optional-dependencies.release = ["check-wheel-contents==0.6.3"]
urls.Documentation = "https://adamtheturtle.github.io/wiremock-mock/"
urls.Source = "https://github.com/adamtheturtle/wiremock-mock"

[tool.setuptools]
zip-safe = false
package-data.wiremock_mock = ["py.typed"]
packages.find.where = ["src"]

[tool.distutils]
bdist_wheel.universal = true

[tool.setuptools_scm]
# This keeps the start of the version the same as the last release.
# This is useful for our documentation to include e.g. binary links
# to the latest released binary.
#
# Code to match this is in ``conf.py``.
version_scheme = "post-release"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.extend-select = ["C901", "ERA001"]
lint.unfixable = ["ERA001"]
lint.mccabe.max-complexity = 12

[tool.pylint]
"MASTER".load-plugins = ["pylint_per_file_ignores"]
"MASTER".jobs = 0
"MESSAGES CONTROL".enable = ["spelling"]
"MESSAGES CONTROL".disable = [
    "line-too-long",
    "unused-import",
    "ungrouped-imports",
    "duplicate-code",
    "wrong-import-order",
    "too-many-return-statements",
    "too-many-branches",
    "unspecified-encoding",
    "unused-argument",
    "import-outside-toplevel",
    "reimported",
]
"MESSAGES CONTROL".per-file-ignores = [
    "docs/source/conf.py:invalid-name",
    "docs/source/doccmd_*.py:missing-module-docstring,invalid-name",
    "doccmd_README_rst_*.py:missing-module-docstring,invalid-name",
]
"SPELLING".spelling-dict = "en_US"
"SPELLING".spelling-private-dict-file = "spelling_private_dict.txt"
"SPELLING".spelling-store-unknown-words = "no"

[tool.check-manifest]
ignore = [
    "*.pyc",
    "__pycache__",
    "__pycache__/**",
    ".checkmake-config.ini",
    ".editorconfig",
    ".prettierrc",
    ".yamlfmt",
    "*.enc",
    ".pre-commit-config.yaml",
    ".vscode/*.json",
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.rst",
    "CONTRIBUTING.rst",
    "Makefile",
    "ci",
    "ci/**",
    ".git_archival.txt",
    "uv.lock",
    "conftest.py",
    "docs",
    "docs/**",
    "tests",
    "tests/**",
    "docs/build",
    "docs/build/**",
    "lint.mk",
    "spelling_private_dict.txt",
    "zizmor.yml",
]

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "release"]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest]
ini_options.xfail_strict = true
ini_options.log_cli = true

[tool.coverage]
run.branch = true
run.source = ["src/wiremock_mock"]
report.exclude_also = ["if TYPE_CHECKING:"]
report.fail_under = 100
report.show_missing = true

[tool.mypy]
strict = true
files = ["."]
exclude = ["build"]
plugins = ["mypy_strict_kwargs"]
follow_untyped_imports = true

[tool.pyrefly]
errors.non-exhaustive-match = "error"

[tool.pyright]
exclude = ["build", ".venv"]
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"

[tool.ty]
analysis.respect-type-ignore-comments = false
terminal.error-on-warning = true

[tool.pydocstringformatter]
write = true
split-summary-body = false
max-line-length = 75
linewrap-full-docstring = true

[tool.interrogate]
fail-under = 100
omit-covered-files = true
verbose = 2

[tool.doc8]
max_line_length = 2000
ignore_path = [
    "./.eggs",
    "./docs/build",
    "./node_modules",
    "./src/*.egg-info/",
]

[tool.vulture]
ignore_names = [
    "add_wiremock_to_respx",
    "load_stubs",
    "base_url",
    "request",
]
exclude = [".venv"]

[tool.yamlfix]
section_whitelines = 1
whitelines = 1
